# ASHR

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motion_planning/lib/motion_planning/: motion_planner
install/motion_planning/share/motion_planning/: package.bash  package.sh  package.zsh
install/moveit_config/share/ament_index/resource_index/package_run_dependencies/: moveit_config
install/moveit_config/share/ament_index/resource_index/parent_prefix_path/: moveit_config
install/moveit_config/share/moveit_config/: package.sh
install/moveit_config/share/moveit_config/config/: moveit_controllers.yaml
install/moveit_config/share/moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
install/myrobot/share/ament_index/resource_index/parent_prefix_path/: myrobot
install/myrobot/share/myrobot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/myrobot/share/myrobot/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
log/: latest_build
src/motion_planning/: setup.py
src/moveit_config/: .setup_assistant
src/moveit_config/config/: Final_ISA_URDF.ros2_control.xacro  Final_ISA_URDF.srdf  Final_ISA_URDF.urdf.xacro  initial_positions.yaml  joint_limits.yaml
src/moveit_config/launch/: demo.launch.py  warehouse_db.launch.py
src/myrobot/: CMakeLists.txt  package.xml
src/myrobot/urdf/: Final_ISA_URDF.csv  Final_ISA_URDF.urdf
